# tech_task

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: auth.py  db.py  main.py  models.py  schemas.py  services_llm.py  settings.py
backend/app/routers/: __init__.py  assets.py  carousels.py  exports.py  generations.py  health.py  preview.py
frontend/: Dockerfile  nuxt.config.ts  package-lock.json  package.json
frontend/assets/: main.css
frontend/composables/: useApi.ts  useMobile.ts
frontend/pages/: create.vue  index.vue
frontend/pages/editor/: [id].vue
