[tool.poetry]
name = "vibecoding-backend"
version = "0.1.0"
description = "Carousel generator MVP backend (FastAPI)"
authors = ["VibeCoder <example@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.0"
asyncpg = "^0.30.0"
alembic = "^1.13.0"
python-dotenv = "^1.0.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.5.0"
httpx = "^0.27.0"
psycopg2-binary = "^2.9.0"
minio = "^7.2.0"
sse-starlette = "^2.1.0"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"